# Rayleigh

./: *.F90  .build_rayleigh.swp  .gitignore  CMakeLists.txt  Makefile  README.md  build_bench  build_bench_LCD  build_bench_nick  build_rayleigh  build_rayleigh.bsh  build_rayleigh.csh  codemeta.json  main_input  make_dirs  pseudo  vrep2  vrep3
Documentation/: .~lock.Rayleigh_Notes.odt#  Rayleigh_Notes.odt  To-Do.odt
IO/: Interp_draft.F90  Spherical_IO.F90
Makefiles/: .Makefile_Standard.swp  Makefile  Makefile_Discover  Makefile_LCD  Makefile_Mira  Makefile_Nick  Makefile_Pleiades  Makefile_Stampede  machine.Nick  machine.Pleiades  object_list
Utility/: BufferedOutput.F90  cmkdir.c
backups/: Linear_Solve.F90  Parallel_Framework.F90
benchmark/: BoundaryConditions.F90  Checkpointing.F90  ClockInfo.F90  Controls.F90  Diagnostics.F90  Drive_Sphere.F90  Fields.F90  Hybrid_Space_Sphere.F90  Initial_Conditions.F90  Input.F90  Linear_Terms_Cart.F90  Linear_Terms_Sphere.F90  Main.F90  Makefile  Makefile_LCD  Makefile_LCD_backup  Makefile_Pleiades  Makefile_nick  NonDimensionalization.F90  Physical_Space_Sphere.F90  Physics.F90  Physics_newlayout.F90  ProblemSize.F90  ReferenceState.F90  SimpleOutput.F90  Spectral_Space_Sphere.F90  Timers.F90  TransportCoefficients.F90
cmake/: FindFFTW.cmake
data_structures/: Structures.F90
idl_chebyshev/: cheby_routines.pro  test_cheby.pro
initial_code/: Field_Manipulation.F90  Grid.F90  Input.F90  Main.F90  Output.F90  read_array.pro
input_examples/: c2001_case0_input  c2001_case0_minimal  c2001_case1_input  c2001_case1_minimal  j2011_hydro_minimal  j2011_steady_hydro_input  j2011_steady_mhd_input  j2011_steady_mhd_minimal  main_input_bench  main_input_sun
math_layer/: Chebyshev_Polynomials.F90  Chebyshev_Polynomials_Object.F90  Finite_Difference.F90  Fourier_Transform.F90  Legendre_Polynomials.F90  Legendre_Transforms.F90  Legendre_Transforms_newlayout.F90  Linear_Solve.F90  Math_Utility.F90  Spectral_Derivatives.F90  Timing.F90
parallel_framework/: All_to_All.F90  MPI_Base.F90  (+10 more)
(+105 files in other folders)
